# Svanhild

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  Silibrand.hpp  Svanhild.cpp  Svanhild.hpp  Svanhild.sln  Svanhild.vcxproj  Svanhild.vcxproj.filters
Headers/librealsense2/: rs.h
Shaders/: compute.comp
assets/: .gitmodules  environment.blend  portal14.gltf
assets/backroom/: camera.gltf  portal12.gltf  portal26.gltf  room1.gltf  room5.gltf
assets/environment1/: camera.gltf  environment1.blend  portal.gltf  room1.gltf  room2.gltf
assets/environment2/: camera.gltf  environment2.blend  environment2.kra  portal12.gltf  portal23.gltf  room1.gltf  room2.gltf  room3.gltf
assets/environment3/: camera.gltf  environment3.blend  portal13.gltf  portal15.gltf  room2.gltf  room3.gltf  room4.gltf  room6.gltf
assets/italy/: Italy.blend  Italy.gltf
legacy/: Model.cpp
libraries/: realsense2.lib
reference/: Benchmark.txt  CMakeLists.txt  CMakeSettings.json  Notes.md
shaders/: fragment.frag  fragment.spv  shader.frag  shader.vert  stencil.frag  vertex.vert
